Changed backend to use Page and jpql queries